fix: adjustments on swagger config
